--- a/axr/02_mdp.ipynb
+++ b/axr/02_mdp.ipynb
@@ -2,27 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.png)](https://colab.research.google.com/github/juansensio/axr/blob/master/axr/02_mdp.ipynb)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "# Procesos de Decision Finitos de Markov\n",
     "\n",
     "Vamos a introducir la formulación de los **procesos de decisión finitos de Markov** (MDPs), la resolución de los cuales abarca el conjunto de algoritmos de AxR. Los MDPs describen procesos de decisión secuencial en los que las acciones tomadas en diferentes situaciones no solo influen en las recompensas inmediatas, sino también en las futuras. A diferencia del ejemplo que vimos en el post anterior, en el que estimamos $q_*(a)$ para cada acción $a$, el uso de MDPs nos va a permitir estimar $q_*(s,a)$ como el valor para cada par estado-acción, $s$ y $a$ respectivamente."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
    "source": [
     "## La interface Agente-Entorno"
-   ]
+   ],
+   "metadata": {
+    "heading_collapsed": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
     "El objetivo de los MDPs es la representación del problema de aprendizaje a través de la interacción con el entorno para conseguir un objetivo. El *agente* es el encargado de aprender y tomar decisiones, mientras que el *entorno* es todo con lo que interacciona y sobre lo que no tiene un control directo. El entrono presenta diferentes situaciones al agente en función de sus acciones, y provee *recompensas* que el agente intenta maximizar.\n",
     "\n",
@@ -59,73 +63,73 @@
     "![](https://mymlpics.s3.eu-de.cloud-object-storage.appdomain.cloud/rl_markov.JPG)\n",
     "\n",
     "Empezando por el estado $s_0$ el agente puede elegir entre las acciones $a_0$, $a_1$ y $a_2$. Si elige la acción $a_1$, siempre se queda en el estado $s_0$ y no recibe recompensa. Si elige la acción $a_0$, tiene un 70% de probabilidades de quedarse en $s_0$ recibiendo +10 de recomensa. Podría quedarse en $s_0$ recibiendo recompensa una y otra vez, pero eventualmente (con un 30% de probabilidad) acabaría en el estado $s_1$. En el nuevo estado, podría llevar a cabo las acciones $a_0$ o $a_2$. Si elige $a_0$ se quedará en el mismo estado sin recibir recompensa, mientras que con $a_2$ transiciona al estado $s_2$ recibiendo una recompensa de -50. Por último, en el estado $s_2$, el agente sólo puede llevar a cabo una acción, $a_1$, que la mayoría de las veces le llevará al estado inicial, recibiendo una recompensa de +40, pero que eventualmente podría llevarle al estados $s_1$ o a quedarse en el mismo estado."
-   ]
+   ],
+   "metadata": {
+    "hidden": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "source": [
+    "probas_transiciones = [\r\n",
+    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\r\n",
+    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\r\n",
+    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\r\n",
+    "]\r\n",
+    "\r\n",
+    "recompensas = [ \r\n",
+    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\r\n",
+    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\r\n",
+    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\r\n",
+    "]\r\n",
+    "\r\n",
+    "acciones = [\r\n",
+    "    [0, 1, 2], \r\n",
+    "    [0, 2], \r\n",
+    "    [1]\r\n",
+    "]"
+   ],
+   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-26T12:52:58.233400Z",
      "start_time": "2020-03-26T12:52:58.228400Z"
     },
     "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "probas_transiciones = [\n",
-    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\n",
-    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\n",
-    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\n",
-    "]\n",
-    "\n",
-    "recompensas = [ \n",
-    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\n",
-    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\n",
-    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\n",
-    "]\n",
-    "\n",
-    "acciones = [\n",
-    "    [0, 1, 2], \n",
-    "    [0, 2], \n",
-    "    [1]\n",
-    "]"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
    "source": [
     "## Objetivos y Recompensas"
-   ]
+   ],
+   "metadata": {
+    "heading_collapsed": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
     "En el AxR el objetivo de un agente está determinado por la *recompensa* que le proporciona el entorno. En cada instante, la recompensa es un valor numérico, y el agente tiene que maximizar la recompensa total recibida a largo plazo. Esta es una de las propiedades más distintivas del AxR en comparación a otras técnicas de aprendizaje. Por ejemplo: un agente aprendiendo a andar tendrá una recompensa positiva cada vez que se mueva hacia adelante. Un robot aprendiendo a recoger basura del suelo tendrá una recompensa positiva cada vez que recoga basura, mientras que recibirá recompensas negativas cuando recoga cosas que no son basura. En definitiva, el agente aprende mediante el proceso de maximización de la recompensa, por lo tanto es crítico que las recompensas reflejen el objetivo que queremos lograr. Un agente aprendiendo a jugar a ajedrez recibirá una recompensa positiva sólo cuando gane y no cada vez que se coma una pieza ya que de hacerlo así podría aprender a comer el máximo de piezas posibles incluso si eso le lleva a perder la partida.\n",
     "\n",
     "La recompensa es nuestra manera de comunicarnos con el agente y tiene que reflejar **qué** queremos conseguir, no el **cómo**.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "## Retornos y Episodios"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
     "hidden": true
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Retornos y Episodios"
+   ],
+   "metadata": {
+    "heading_collapsed": true
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "Definimos el *retorno* como una función de todas las recomensas recibidas después de el instante $t$. En el caso más simple\n",
     "\n",
@@ -142,26 +146,26 @@
     "$$\n",
     "\n",
     "donde $0 \\leq \\gamma \\leq 1$ es el ratio de descuento, el cual determina el valor presente de las recompensas futuras. Un valor de $\\gamma=0$ hará que el agente se focalice únicamente en recompensas inmediatas, mientras que a medida que $\\gamma$ se acerca a 1 el agente tendrá en cuenta las recompensas a largo plazo con mayor intensidad."
-   ]
+   ],
+   "metadata": {
+    "hidden": true
+   }
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Políticas y Funciones de Valor"
+   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-26T11:16:02.487008Z",
      "start_time": "2020-03-26T11:16:02.482009Z"
     },
     "heading_collapsed": true
-   },
-   "source": [
-    "## Políticas y Funciones de Valor"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
     "Prácticamente todos los algoritmos de AxR se basan en la estimación de *funciones de valor*, que indican lo *bueno* que es un estado o un par estado-acción. Formalmente, esta medida de bondad viene dada por las recompensas futuras esperadas, o el retorno esperado. Las funciones de valor están definidas con respecto a formas particulares de actuar, llamdas *políticas*.\n",
     "\n",
@@ -182,11 +186,13 @@
     "$$\n",
     "\n",
     "Ambas funciones de valor se estiman a través de la experiencia. Por ejemplo, los métodos *Monte Carlo* mantienen un registro por cada estado visitado de la recompensa media obtenida desde ese estado en adelante. Si el número de veces que cada estados es visitado se aproxima a infito, estos valores promedios convergen a $v_\\pi(s)$. Lo mismo se puede hacer con $q_\\pi(s,a)$ si se mantiene un registro por cada acción tomada. Esta metodología es problemática si hay muchos estados o acciones. En estos casos las funciones $v_\\pi(s)$ y $q_\\pi(s,a)$ son funciones paramétricas (con menos parámteros que estados, obviamente) y estos parámetros se van ajustando en función de las recompensas obtenidas."
-   ]
+   ],
+   "metadata": {
+    "hidden": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## La ecuación de *Bellman*\n",
     "\n",
@@ -197,26 +203,24 @@
     "$$\n",
     "\n",
     "Esta expresión se conoce como la *ecuación de Bellman* para $v_\\pi$. Expresa la relación entre el valor de una estado y el valor de los estados sucesivos. Empezando por el estado $s$ un agente podría tomar una acción de entre varias basada en una política $\\pi$. Para cada una de estas acciones, el entorno podría responder con uno de los varios posibles estados sucesivos $s'$ junto a una recompensa $r$ depenendiendo de la dinámica del entorno dada por la función de probabilidad $p$. La ecuación de Bellman calcula el promedio de todas estas posibilidades, ponderando cada una por su probabilidad de ocurrir. Determina que el valor de una estado es igual al valor del estado sucesivo esperado (descontado) más la recompensa obtenida por el camino."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Políticas óptimas y Funciones de Valor óptimas"
+   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-26T12:18:33.554818Z",
      "start_time": "2020-03-26T12:18:33.550817Z"
     },
     "heading_collapsed": true
-   },
-   "source": [
-    "## Políticas óptimas y Funciones de Valor óptimas"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
     "Resolver un problema de AxR significa, a grandes rasgos, encontrar *una* política que consiga *mucha* recompensa a largo plazo. Para MDPs finitos podemos definir la *política óptima*, $\\pi_*$, como aquella con mayor función de valor para cualquier estado\n",
     "\n",
@@ -247,19 +251,14 @@
     "Vamos a ver un ejemplo de aproximación de $q_*(s,a)$ utilizando programación dinámica, un algoritmo de AxR que veremos en detalle más adelante, para el MDP visto anteriormente.\n",
     "\n",
     "![](https://mymlpics.s3.eu-de.cloud-object-storage.appdomain.cloud/rl_markov.JPG)\n"
-   ]
+   ],
+   "metadata": {
+    "hidden": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-26T13:06:02.206222Z",
-     "start_time": "2020-03-26T13:06:02.200213Z"
-    },
-    "hidden": true
-   },
-   "outputs": [],
    "source": [
     "probas_transiciones = [\n",
     "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\n",
@@ -278,32 +277,19 @@
     "    [0, 2], \n",
     "    [1]\n",
     "]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-26T13:06:02.206222Z",
+     "start_time": "2020-03-26T13:06:02.200213Z"
+    },
+    "hidden": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-26T13:06:02.366516Z",
-     "start_time": "2020-03-26T13:06:02.362515Z"
-    },
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0.,   0.,   0.],\n",
-       "       [  0., -inf,   0.],\n",
-       "       [-inf,   0., -inf]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -314,32 +300,32 @@
     "    q[estado, accion] = 0.0  \n",
     "\n",
     "q"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[  0.,   0.,   0.],\n",
+       "       [  0., -inf,   0.],\n",
+       "       [-inf,   0., -inf]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-26T13:06:02.366516Z",
+     "start_time": "2020-03-26T13:06:02.362515Z"
+    },
+    "hidden": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-26T13:06:02.478097Z",
-     "start_time": "2020-03-26T13:06:02.465098Z"
-    },
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[18.91891892, 17.02702703, 13.62162162],\n",
-       "       [ 0.        ,        -inf, -4.87971488],\n",
-       "       [       -inf, 50.13365013,        -inf]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "gamma = 0.90  # factor de descuento\n",
     "\n",
@@ -352,69 +338,71 @@
     "            q[s, a] = np.sum([probas_transiciones[s][a][sp]*(recompensas[s][a][sp] + gamma*np.max(q_prev[sp])) for sp in range(3)])\n",
     "            \n",
     "q"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[18.91891892, 17.02702703, 13.62162162],\n",
+       "       [ 0.        ,        -inf, -4.87971488],\n",
+       "       [       -inf, 50.13365013,        -inf]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-26T13:06:02.478097Z",
+     "start_time": "2020-03-26T13:06:02.465098Z"
+    },
+    "hidden": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-26T13:06:02.604656Z",
-     "start_time": "2020-03-26T13:06:02.599656Z"
-    },
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# política óptima\n",
     "\n",
     "pi = np.argmax(q, axis=1)\n",
     "\n",
     "pi"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-26T13:06:02.604656Z",
+     "start_time": "2020-03-26T13:06:02.599656Z"
+    },
+    "hidden": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
     "La política óptima encontrada nos dice que en el estado $s_0$ tomar la acción $a_0$ es lo mejor, efectivamente nos da +10 de recompensa. En el estado $s_1$ los mejor es tomar la acción $a_0$, ya que la altrenativa nos dará una recompensa negativa. En el estado $s_2$ lo mejor es tomar la acción $a_1$, que en la mayoría de ocasiones nos dará una recompensa de +40. Un factor de descuento distinto dará como resultado otra política en función de cuánto valoremos recompensas a largo plazo."
-   ]
+   ],
+   "metadata": {
+    "hidden": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-26T13:06:03.968110Z",
-     "start_time": "2020-03-26T13:06:03.954226Z"
-    },
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 2, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "gamma = 0.95  # factor de descuento\n",
     "\n",
@@ -427,38 +415,57 @@
     "# política óptima\n",
     "\n",
     "np.argmax(q, axis=1)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 2, 1], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-26T13:06:03.968110Z",
+     "start_time": "2020-03-26T13:06:03.954226Z"
+    },
+    "hidden": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
     "En esta nueva política la acción óptima del estado $s_1$ ahora ha cambiado a $a_2$, lo cual dará como resultado una recompensa negativa de -50 pero que nos lleva al estado $s_2$, desde donde podemos conseguir la recompensa de +40."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "## Resumen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   ],
    "metadata": {
     "hidden": true
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Resumen"
+   ],
+   "metadata": {
+    "heading_collapsed": true
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "El AxR consiste en aprender un comportamiento a través de la interacción para conseguir un objetivo. El *agente*, mediante la realización de *acciones*, interactúa con el *entorno*, que define un *estado* y una *recompensa*. El objetivo del agente es maximizar la recompensa recibida a lo largo del tiempo. Cuando esta configuración está formulada con probabilidades de transición definidas constituye un *proceso de decisión de Markov* (MDP). Un MDP *finito* es un MDP con estados, acciones y recompensas finitas.\n",
     "\n",
     "El *retorno* es la función de recompensas futuras que el agente tiene que maximizar. Las *funciones de valor* de una *politica* asignan a cada estado (o par estado-acción) el retorno esperado. Las *funciones de valor óptimas* asignan el máximo retorno  esperado para la política determinada. Una política cuyas funciones de valor sean óptimas, es una *política óptima*. \n",
     "\n",
     "La *ecuación de Bellman* especifica condiciones de consistencia que una política óptima debe cumplir, y puede (en principio) resolverse para encontrar las funciones de valor óptimas. Sin embargo, debido a las limitaciones que entornos complejos pueden acarrear, la mayoría de métodos se basan en encontrar aproximaciones a estas funciones."
-   ]
+   ],
+   "metadata": {
+    "hidden": true
+   }
   }
  ],
  "metadata": {
