--- a/axr/02_mdp.ipynb
+++ b/axr/02_mdp.ipynb
@@ -10,8 +10,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Procesos de Decision Finitos de Markov\n",
-    "\n",
+    "# Procesos de Decisión Finitos de Markov\r\n",
+    "\r\n",
     "Vamos a introducir la formulación de los **procesos de decisión finitos de Markov** (MDPs), la resolución de los cuales abarca el conjunto de algoritmos de AxR. Los MDPs describen procesos de decisión secuencial en los que las acciones tomadas en diferentes situaciones no solo influen en las recompensas inmediatas, sino también en las futuras. A diferencia del ejemplo que vimos en el post anterior, en el que estimamos $q_*(a)$ para cada acción $a$, el uso de MDPs nos va a permitir estimar $q_*(s,a)$ como el valor para cada par estado-acción, $s$ y $a$ respectivamente."
    ],
    "metadata": {}
@@ -473,9 +473,8 @@
    "hash": "bb9f406c0f70fca9801e60f2cbb7cd1ccff2ae2f74c58f513340bcf6cae5ecd0"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
