--- a/axr/02_mdp.ipynb
+++ b/axr/02_mdp.ipynb
@@ -72,22 +72,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "probas_transiciones = [\r\n",
-    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\r\n",
-    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\r\n",
-    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\r\n",
-    "]\r\n",
-    "\r\n",
-    "recompensas = [ \r\n",
-    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\r\n",
-    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\r\n",
-    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\r\n",
-    "]\r\n",
-    "\r\n",
-    "acciones = [\r\n",
-    "    [0, 1, 2], \r\n",
-    "    [0, 2], \r\n",
-    "    [1]\r\n",
+    "probas_transiciones = [\n",
+    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\n",
+    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\n",
+    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\n",
+    "]\n",
+    "\n",
+    "recompensas = [ \n",
+    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\n",
+    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\n",
+    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\n",
+    "]\n",
+    "\n",
+    "acciones = [\n",
+    "    [0, 1, 2], \n",
+    "    [0, 2], \n",
+    "    [1]\n",
     "]"
    ],
    "outputs": [],
@@ -444,6 +444,22 @@
    "metadata": {
     "hidden": true
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Resolviendo MDPs\n",
+    "\n",
+    "Existen multitud de métodos y algoritmos que pueden ser utlizados para resolver MDPs. En el campo del AxR puedes ser clasificados en base a sus propiedades. Los grupos de métodos más comunes se dividen en:\n",
+    "\n",
+    "- **tabulares** vs **aproximados**: Hablamos de métodos tabulares para referirnos a aquellos métodos capaces de encontrar de manera exacta funciones de valor y políticas óptimas, para los cuales podemos representar las funciones de acción-valor como una lista o una *tabla*. Estos casos suelen estar limitados a entornos con un pequeño conjunto de estados y acciones (como los que hemos visto en los posts anteriores). Cuando este conjunto es tan grande que no es posible representarlo de manera exacta, recurrimos a los métodos aproximados que, como su nombre indica, nos darán una solución aproximada. Por ejemplo, un método tabular es suficiente para entrenar un agente que juegue al tres en raya de manera óptima, ya que podemos representar en una tabla todas las posibles configuraciones del juego y, para cada una, su valor. Sin embargo, intentar hacer lo mismo para juegos como el ajedrez o el go resultaría imposible ya que el número de posibles estados y acciones es astronómico. En estos casos, recurrimos a métodos aproximados.\n",
+    "- **model-free** vs **model-based**: Los métodos basasdos en modelos son capaces de predecir la recompensa que obtendrán en el futuro, para lo cual necesitan de un modelo del entorno que puede ser dado o aprendido. Por otro lado, los modelos no basados en el entorno aprender directamente de las recompensas obtenidas, relacionando observaciones y acciones.\n",
+    "- **value-based** vs **policy-based**: Los métodos de AxR basados en política nos darán una distribución de probabilidad sobre el conjunto de acciones dado un estado determinado, es decir, aproximan directamente la política del agente. Por el contrario, los métodos basados en valores, asignan un valor a cada acción (o par estado-acción), el cual es usado por el agente para definir su política (por ejemplo, escoger la acción con mayor valor). \n",
+    "- **On-policy** vs **off-policy**: Un método *on-policy* basa su aprendizaje en la interacción del agente con el entorno en tiempo real, mientras que un método *off-policy* es capaz de aprender de interacciones de otros agentes, ejemplos humanos o del mismo agente en versiones pasadas.\n",
+    "\n",
+    "En este post vamos a introducir la primera clase de métodos, los tabulares, los cuales podemos usar para asentar los conceptos claves del AxR."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
