--- a/axr/02_mdp.ipynb
+++ b/axr/02_mdp.ipynb
@@ -72,22 +72,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "probas_transiciones = [\n",
-    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\n",
-    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\n",
-    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\n",
-    "]\n",
-    "\n",
-    "recompensas = [ \n",
-    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\n",
-    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\n",
-    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\n",
-    "]\n",
-    "\n",
-    "acciones = [\n",
-    "    [0, 1, 2], \n",
-    "    [0, 2], \n",
-    "    [1]\n",
+    "probas_transiciones = [\r\n",
+    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\r\n",
+    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\r\n",
+    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\r\n",
+    "]\r\n",
+    "\r\n",
+    "recompensas = [ \r\n",
+    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\r\n",
+    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\r\n",
+    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\r\n",
+    "]\r\n",
+    "\r\n",
+    "acciones = [\r\n",
+    "    [0, 1, 2], \r\n",
+    "    [0, 2], \r\n",
+    "    [1]\r\n",
     "]"
    ],
    "outputs": [],
@@ -260,22 +260,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "probas_transiciones = [\n",
-    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\n",
-    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\n",
-    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\n",
-    "]\n",
-    "\n",
-    "recompensas = [ \n",
-    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\n",
-    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\n",
-    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\n",
-    "]\n",
-    "\n",
-    "acciones = [\n",
-    "    [0, 1, 2], \n",
-    "    [0, 2], \n",
-    "    [1]\n",
+    "probas_transiciones = [\r\n",
+    "    [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # p(s0| s0, a0), p(s0| s0, a1), p(s0| s0, a2)\r\n",
+    "    [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]           ], # p(s1| s1, a0), p(s1| s1, a1), p(s1| s1, a2)\r\n",
+    "    [None,            [0.8, 0.1, 0.1], None           ]  # p(s2| s2, a0), p(s2| s2, a1), p(s2| s2, a2)\r\n",
+    "]\r\n",
+    "\r\n",
+    "recompensas = [ \r\n",
+    "    [[+10, 0, 0], [0, 0, 0],   [0, 0, 0]],   # r(s0, s0, a0), r(s0, s0, a1), r(s0, s0, a2)\r\n",
+    "    [[0, 0, 0],   [0, 0, 0],   [0, 0, -50]], # r(s1, s1, a0), r(s1, s1, a1), r(s1, s1, a2)\r\n",
+    "    [[0, 0, 0],   [+40, 0, 0], [0, 0, 0]]    # r(s2, s2, a0), r(s2, s2, a1), r(s2, s2, a2)\r\n",
+    "]\r\n",
+    "\r\n",
+    "acciones = [\r\n",
+    "    [0, 1, 2], \r\n",
+    "    [0, 2], \r\n",
+    "    [1]\r\n",
     "]"
    ],
    "outputs": [],
@@ -291,14 +291,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# inicializamos q(s, a)\n",
-    "\n",
-    "q = np.full((3, 3), -np.inf) # -np.inf para acciones imposibles\n",
-    "for estado, accion in enumerate(acciones):\n",
-    "    q[estado, accion] = 0.0  \n",
-    "\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "# inicializamos q(s, a)\r\n",
+    "\r\n",
+    "q = np.full((3, 3), -np.inf) # -np.inf para acciones imposibles\r\n",
+    "for estado, accion in enumerate(acciones):\r\n",
+    "    q[estado, accion] = 0.0  \r\n",
+    "\r\n",
     "q"
    ],
    "outputs": [
@@ -327,16 +327,16 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "gamma = 0.90  # factor de descuento\n",
-    "\n",
-    "# estimamos q* aplicando la eq. de Bellman de optimalidad\n",
-    "\n",
-    "for iteration in range(100):\n",
-    "    q_prev = q.copy()\n",
-    "    for s in range(3):\n",
-    "        for a in acciones[s]:\n",
-    "            q[s, a] = np.sum([probas_transiciones[s][a][sp]*(recompensas[s][a][sp] + gamma*np.max(q_prev[sp])) for sp in range(3)])\n",
-    "            \n",
+    "gamma = 0.90  # factor de descuento\r\n",
+    "\r\n",
+    "# estimamos q* aplicando la eq. de Bellman de optimalidad\r\n",
+    "\r\n",
+    "for iteration in range(100):\r\n",
+    "    q_prev = q.copy()\r\n",
+    "    for s in range(3):\r\n",
+    "        for a in acciones[s]:\r\n",
+    "            q[s, a] = np.sum([probas_transiciones[s][a][sp]*(recompensas[s][a][sp] + gamma*np.max(q_prev[sp])) for sp in range(3)])\r\n",
+    "            \r\n",
     "q"
    ],
    "outputs": [
@@ -365,10 +365,10 @@
    "cell_type": "code",
    "execution_count": 21,
    "source": [
-    "# política óptima\n",
-    "\n",
-    "pi = np.argmax(q, axis=1)\n",
-    "\n",
+    "# política óptima\r\n",
+    "\r\n",
+    "pi = np.argmax(q, axis=1)\r\n",
+    "\r\n",
     "pi"
    ],
    "outputs": [
@@ -404,16 +404,16 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
-    "gamma = 0.95  # factor de descuento\n",
-    "\n",
-    "for iteration in range(50):\n",
-    "    q_prev = q.copy()\n",
-    "    for s in range(3):\n",
-    "        for a in acciones[s]:\n",
-    "            q[s, a] = np.sum([probas_transiciones[s][a][sp]*(recompensas[s][a][sp] + gamma*np.max(q_prev[sp])) for sp in range(3)])\n",
-    "            \n",
-    "# política óptima\n",
-    "\n",
+    "gamma = 0.95  # factor de descuento\r\n",
+    "\r\n",
+    "for iteration in range(50):\r\n",
+    "    q_prev = q.copy()\r\n",
+    "    for s in range(3):\r\n",
+    "        for a in acciones[s]:\r\n",
+    "            q[s, a] = np.sum([probas_transiciones[s][a][sp]*(recompensas[s][a][sp] + gamma*np.max(q_prev[sp])) for sp in range(3)])\r\n",
+    "            \r\n",
+    "# política óptima\r\n",
+    "\r\n",
     "np.argmax(q, axis=1)"
    ],
    "outputs": [
